--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#Journey">Journey</a>
-        <a href="#Allies">Allies</a>
+        <a href="#Partner">Partner</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -142,14 +142,14 @@
 
     <!-- sAllies Sections -->
 
-    <section class="Allies" id="Allies">
-      <h2 class="heading3">Our <span>Allies</span></h2>
-      <div class="Allies-row">
-        <div class="Allies-column">
+    <section class="Partner" id="Partner">
+      <h2 class="heading3">Our <span>Partner</span></h2>
+      <div class="Partner-row">
+        <div class="Partner-column">
           <h3 class="title">Europe</h3>
 
-          <div class="Allies-box">
-            <div class="Allies-content">
+          <div class="Partner-box">
+            <div class="Partner-content">
               <div class="progress">
                 <h3>A.P. Moller-Maersk Group <span>Denmark</span></h3>
                 <div class="bar"><span></span></div>
@@ -173,11 +173,11 @@
           </div>
         </div>
 
-        <div class="Allies-column">
+        <div class="Partner-column">
           <h3 class="title">Asia</h3>
 
-          <div class="Allies-box">
-            <div class="Allies-content">
+          <div class="Partner-box">
+            <div class="Partner-content">
               <div class="progress">
                 <h3>Evergreen Marine <span>Taiwan</span></h3>
                 <div class="bar"><span></span></div>
@@ -206,8 +206,7 @@
     <!-- contact section -->
 
     <section class="contact" id="contact">
-      <h2 class="heading2">Contact <span>Us!</span></h2>
-
+      <h2 class="heading2">Contact <span>Us</span></h2>
       <form action="#">
         <div class="input-box">
           <div class="input-field">
